syntax = "proto3";

package greeter.v1;

//option go_package = "github.com/omgolab/drpc/examples/echo/internal/gen/v1/greeter/v1;greeterv1";

service GreeterService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}
